# nat_zacros

./: .gitignore  EDITABLE_INSTALL_NOTES.md  LICENSE  MIGRATION_TO_TOML.md  README.md  condalist_env_nat_zacros.txt  condalist_natzacros.txt  debug_version.py  pyproject.toml  setup.py
nat_zacros/: __init__.py  lattice.py  rdf.py  simulation.py  simulation_run.py  simulation_set.py  state.py  trajectory.py
nat_zacros/data_processing/: __init__.py  parallel_loading.py  rdf.py
nat_zacros/examples/: README.md  comparison of trajectory data 3a and 3b.txt  demo_simulation_run_class.ipynb  nat-zacros_analysis_v1.ipynb  simulation_run_usage_examples.ipynb
